methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:19: error: ')' expected but '}' found.
} 
^